--- a/package.json
+++ b/package.json
@@ -26,13 +26,17 @@
     ]
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.3.11",
     "@material-ui/styles": "^4.10.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "chart.js": "^2.9.3",
     "clsx": "^1.1.1",
+    "date-fns": "^2.30.0",
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash": "^4.17.19",
@@ -44,7 +48,7 @@
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
-    "react-notifications-component": "^4.0.1",
+    "react-notifications": "^1.7.4",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
