--- a/package.json
+++ b/package.json
@@ -53,9 +53,11 @@
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^3.4.1",
+    "react-toastify": "^8.0.0",
     "uuid": "^8.3.0",
     "yup": "^0.29.3"
   },
+  "proxy": "http://localhost:44312/",
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.2.0",
