--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "uuid": "^8.3.0",
     "yup": "^0.29.3"
   },
-  "proxy": "http://localhost:44312/",
+  "proxy": "https://localhost:44312/",
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.2.0",
